--- a/Pavon.Persistence/Pavon.Persistence.csproj
+++ b/Pavon.Persistence/Pavon.Persistence.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.101.1" />
   </ItemGroup>
 
   <ItemGroup>
