--- a/Pavon.Service/Pavon.Service.csproj
+++ b/Pavon.Service/Pavon.Service.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    <ProjectReference Include="..\Pavon.Application\Pavon.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
-    <Folder Include="Exceptions\" />
+    <Folder Include="Services\" />
+    <Folder Include="UnitOfServices\" />
   </ItemGroup>
 
 </Project>
