--- a/Pavon.Persistence/Pavon.Persistence.csproj
+++ b/Pavon.Persistence/Pavon.Persistence.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pavon.Application\Pavon.Application.csproj" />
+    <ProjectReference Include="..\Pavon.Domain\Pavon.Domain.csproj" />
   </ItemGroup>
 
 </Project>
