--- a/Pavon.Service/Pavon.Service.csproj
+++ b/Pavon.Service/Pavon.Service.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Services\Commands\" />
+    <Folder Include="Services\Queries\" />
     <Folder Include="UnitOfServices\" />
   </ItemGroup>
 
